<resources>

    <string name="app_name">LoanApp</string>

    <!--  EditText error  -->
    <string name="empty_field_error">Please, fill this field</string>
    <string name="password_doesnt_match">Passwords doesn\'\t match</string>

    <!--  Navigation labels  -->
    <string name="nav_label_login">Login</string>
    <string name="nav_label_register">Register</string>
    <string name="nav_label_loans">Loan list</string>
    <string name="nav_label_settings">Settings</string>
    <string name="nav_label_loan_detailed">Loan request details</string>
    <string name="nav_label_request_loan">Loan application</string>


    <!--  Auth  -->
    <string name="text_input_layout_login_hint">Enter your login</string>
    <string name="text_input_layout_password_hint">Enter your password</string>
    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>
    <string name="txt_dont_have_account">Don\'t have an account? Register</string>
    <string name="text_input_layout_pass_conf">Repeat your password</string>

    <!-- Logout  -->
    <string name="dialog_logout_title">Are you sure you want to log out?</string>
    <string name="dialog_logout_positive_button">Yes</string>
    <string name="dialog_logout_negative_button">No</string>

    <!-- LoanDetailFragment   -->
    <string name="txt_loan_detail_status_approved">Your request is approved!</string>
    <string name="txt_loan_detail_status_rejected">Your request is rejected!</string>
    <string name="txt_loan_detail_status_registered">Your request is registered!</string>
    <string name="txt_loan_detail_success_description">Your application has been approved. Next, you need to choose a way to receive money: to your bank card or to receive money at the branch</string>
    <string name="txt_loan_detail_reject_description">Your application has been rejected. To find out the reason for the refusal to issue a loan, please contact us via the hotline</string>
    <string name="txt_loan_detail_registered_description">Please, wait for your request approval</string>
    <string name="txt_amount_loan_detail">Amount: %d RUB</string>
    <string name="txt_date_loan_detail">Date: %s</string>
    <string name="txt_percent_loan_detail">Percent: %.2f %%</string>
    <string name="txt_period_loan_detail">Period: %d days</string>
    <string name="txt_status_approved_loan_detail">State: Approved</string>
    <string name="txt_status_rejected_loan_detail">State: Rejected</string>
    <string name="txt_status_registered_loan_detail">State: Registered</string>


    <!--  RequestLoanFragment  -->
    <string name="edit_txt_request_loan_phone_number">Enter your phone number</string>
    <string name="edit_txt_request_loan_lastName">Enter your last name</string>
    <string name="edit_txt_request_loan_firstName">Enter your name</string>
    <string name="edit_txt_request_loan_amount">Enter the loan amount</string>
    <string name="txt_view_loan_period">Loan period: %d days</string>
    <string name="txt_view_loan_percent">Loan interest: %.2f %%</string>
    <string name="txt_view_loan_max_amount">Maximum loan amount: %d RUB</string>
    <string name="txt_view_loan_conditions">Loan terms and conditions</string>
    <string name="btn_request_loan">Get a loan</string>

    <!--  LoanResultFragment  -->
    <string name="txt_view_loan_result">Your application has been processed</string>
    <string name="nav_label_loan_result">Request is submitted</string>
    <string name="txt_view_loan_result_amount">Your application for a loan in the amount of %d RUB will be considered</string>
    <string name="btn_go_back_to_loans">Go back to the list of loans</string>


    <!--  LoansFragment  -->
    <string name="txt_view_loan_date" translatable="false">%s</string>


    <!-- Settings   -->
    <string name="settings_language_preference" translatable="false">APP_LANGUAGE</string>
    <string name="language_list_title">Select language</string>

    <!-- Errors   -->
    <string name="error_no_internet_connection">No internet connection</string>
    <string name="error_timeout">Timeout response</string>
    <string name="error_401">User is unauthorized</string>
    <string name="error_403">Access is permitted</string>
    <string name="error_404">Not found, please, check input data</string>
    <string name="error_unknown">Unknown error</string>
    <string name="request_loan_amount_error">Amount is greater than max value</string>

    <!--  Loan Status  -->
    <string name="txt_view_loan_status_approved">Approved</string>
    <string name="txt_view_loan_status_registered">Registered</string>
    <string name="txt_view_loan_status_rejected">Rejected</string>

    <string name="txt_view_amount" translatable="false">%d RUB</string>


    <string-array name="language_array">
        <item>Русский</item>
        <item>English</item>
    </string-array>

    <string-array name="language_code">
        <item>ru</item>
        <item>en</item>
    </string-array>

</resources>