<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.loanapp.ui.auth.LoginFragment"
        android:label="@string/nav_label_login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_loansFragment"
            app:destination="@id/loansFragment"
            app:launchSingleTop="true"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/registerFragment"
            app:launchSingleTop="true" />
    </fragment>
    <fragment
        android:id="@+id/loansFragment"
        android:name="com.example.loanapp.ui.loan.LoansFragment"
        android:label="@string/nav_label_loans"
        tools:layout="@layout/fragment_loans">
        <action
            android:id="@+id/action_loansFragment_to_requestLoanFragment"
            app:destination="@id/requestLoanFragment"
            app:launchSingleTop="true" />
        <action
            android:id="@+id/action_loansFragment_to_loanDetailFragment"
            app:destination="@id/loanDetailFragment"
            app:launchSingleTop="true" />
        <action
            android:id="@+id/action_loansFragment_to_settingsFragment"
            app:destination="@id/settingsFragment"
            app:launchSingleTop="true" />
        <action
            android:id="@+id/action_loansFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:launchSingleTop="true"
            app:popUpTo="@id/loansFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/registerFragment"
        android:name="com.example.loanapp.ui.auth.RegisterFragment"
        android:label="@string/nav_label_register"
        tools:layout="@layout/fragment_register">
        <action
            android:id="@+id/action_registerFragment_to_loginFragment"
            app:launchSingleTop="true"
            app:popUpTo="@id/registerFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/requestLoanFragment"
        android:name="com.example.loanapp.ui.loan.RequestLoanFragment"
        android:label="@string/nav_label_request_loan"
        tools:layout="@layout/fragment_request_loan">
        <action
            android:id="@+id/action_requestLoanFragment_to_loanResultFragment"
            app:destination="@id/loanResultFragment"
            app:launchSingleTop="true"
            app:popUpTo="@id/requestLoanFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/loanResultFragment"
        android:name="com.example.loanapp.ui.loan.LoanResultFragment"
        android:label="@string/nav_label_loan_result"
        app:launchSingleTop="true"
        tools:layout="@layout/fragment_loan_result">
        <action
            android:id="@+id/action_loanResultFragment_to_loansFragment"
            app:launchSingleTop="true"
            app:popUpTo="@id/loanResultFragment"
            app:popUpToInclusive="true" />
        <argument
            android:name="loan_amount"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/loanDetailFragment"
        android:name="com.example.loanapp.ui.loan.LoanDetailFragment"
        android:label="@string/nav_label_loan_detailed"
        tools:layout="@layout/fragment_loan_detail">
        <argument
            android:name="loan"
            app:argType="com.example.loanapp.domain.entity.Loan" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.loanapp.ui.settings.SettingsFragment"
        android:label="@string/nav_label_settings" />
</navigation>