<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.loan.RequestLoanFragment">


    <ProgressBar
        android:id="@+id/progress_bar_request_loan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/txt_view_loan_conditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_view_loan_conditions"
        android:textColor="?MainTextViewColor"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/txt_field_amount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_view_loan_max_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?MainTextViewColor"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@id/txt_view_loan_percent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_view_loan_conditions"
        tools:text="@string/txt_view_loan_max_amount" />

    <TextView
        android:id="@+id/txt_view_loan_percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?MainTextViewColor"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@id/txt_view_loan_period"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_view_loan_max_amount"
        tools:text="@string/txt_view_loan_percent" />

    <TextView
        android:id="@+id/txt_view_loan_period"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?MainTextViewColor"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@id/txt_field_amount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_view_loan_percent"
        tools:text="@string/txt_view_loan_period" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_field_amount"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/edit_txt_request_loan_amount"
        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@id/txt_field_firstName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_view_loan_period"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:inputType="number"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_field_firstName"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/edit_txt_request_loan_firstName"
        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@id/txt_field_lastName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_field_amount">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:inputType="textPersonName"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_field_lastName"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/edit_txt_request_loan_lastName"
        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@id/txt_field_percent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_field_firstName">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:inputType="textPersonName"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_field_percent"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/edit_txt_request_loan_percent"
        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@id/txt_field_period"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_field_lastName">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:inputType="numberDecimal"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_field_period"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/edit_txt_request_loan_period"
        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@id/txt_field_phone_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_field_percent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:inputType="number"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_field_phone_number"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/edit_txt_request_loan_phone_number"
        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@id/btn_request_loan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_field_period">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:inputType="phone"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_request_loan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_request_loan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_field_phone_number" />

</androidx.constraintlayout.widget.ConstraintLayout>