<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.loan.LoanResultFragment">


    <ImageView
        android:id="@+id/img_loan_result"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/success"
        app:layout_constraintBottom_toTopOf="@id/txt_view_loan_result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/txt_view_loan_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_view_loan_result"
        android:textColor="?MainTextViewColor"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@id/txt_view_loan_result_amount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_loan_result" />

    <TextView
        android:id="@+id/txt_view_loan_result_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_view_loan_result_amount"
        android:textAlignment="center"
        android:textColor="?MainTextViewColor"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/btn_go_back_to_loans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_view_loan_result" />


    <Button
        android:id="@+id/btn_go_back_to_loans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_go_back_to_loans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_view_loan_result_amount" />
</androidx.constraintlayout.widget.ConstraintLayout>